# UpdaterDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
docs/: 00-QtIFW-XML.md  01-QtIFW-usage-CreateInstaller.md  02-QtIFW-usage-PromoteUpdates.md  03-QtIFW-usage-CustomizingInstallers.md  04-组件的下载、临时存储和最终安装.md  Updates.xml  aliases.xml  config.xml  package.xml
include/: config.h  model.h  serialize.h  updater.h
include/common/: Path.h
include/config/: IConfigLoader.h  XMLConfigLoader.h  readme.md
include/core/: UpdateManager.h  readme.md
include/download/: HttpDownloadService.h  IDownloadService.h  MockDownloadService.h  readme.md
include/error/: exception.h
include/install/: IInstallService.h  MockInstallService.h  RsyncInstallService.h  ZipInstallService.h  readme.md
include/local/: IComponentRepository.h  MockComponentRepository.h  XmlComponentRepository.h  readme.md
include/log/: Logger.h
include/model/: ComponentsXML.h  Config.h  Date.h  LocalArchiveInfo.h  Repository.h  UpdatesXML.h  Version.h  readme.md
include/net/: HttpNetworkAccess.h  INetworkAccess.h  readme.md
include/provider/: IUpdateProvider.h  MockUpdateProvider.h  XmlUpdateProvider.h  readme.md
include/selector/: IPackageSelector.h  MockSelector.h  UpdateSelector.h  readme.md
src/: main.cpp
tests/: log_test.cpp  main.cpp  mock.cpp
